tests/paczka1/small_fuzzy/57594225.err
Error in line 1: sfwegRls A13 64,2
Error in line 3: sfwegRls A497 14,3
Error in line 12: bl1PKvleCf A497 73,0
Error in line 14: bl1PKvleCf A239 74,9
